# cpp-component-system

./: CMakeLists.txt  CMakePresets.json
src/: component.hpp  entity.cpp  entity.hpp  event.hpp  main.cpp  optional_ref.hpp  query.hpp  query_definition.hpp  string_name.cpp  string_name.hpp  system.hpp  system_definition.hpp  utils.hpp  world.cpp  world.hpp
